k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ecommerce.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: cart
                port:
                  number: 3003
          - path: /api/product
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 3002
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 3001
